Fixed issue with inappropriate whitespace under columns in panel.

--- a/static/css/site/header.scss
+++ b/static/css/site/header.scss
@@ -224,6 +224,9 @@ header {
         visibility: visible;
         transition: opacity 400ms ease-out;
     }
+    .contents:not(.active) .column {
+        height: 0;
+    }
 }
 
 .pitaka {
